Navigation bar stylized using HTML and CSS

--- a/public/css/default.css
+++ b/public/css/default.css
@@ -1,3 +1,12 @@
+.test {
+  display: block;
+}
+
+.navbar {
+  background-color: black;
+}
+
 .navbar-header {
   background-color: black;
+  margin: 30px;
 }
