--- a/public/css/default.css
+++ b/public/css/default.css
@@ -1,12 +1,11 @@
-.test {
-  display: block;
+.logo {
+  height: 31px;
 }
 
 .navbar {
   background-color: black;
 }
 
-.navbar-header {
-  background-color: black;
-  margin: 30px;
+.navbuttons {
+  font-family: "Helvetica Heue", Helvetica, Arial, sans-serif;
 }
